# python_scripter

./: CMakeLists.txt  README.md  mk
_widgets/ui/: code_editor.ui
scripts/: CMakeLists.txt  python_scripter.py
src/: CMakeLists.txt
src/_core/: interpreter.py
src/_widgets/: code_editor.py
src/_widgets/ui/: .gitignore  CMakeLists.txt  code_editor.py
